--- a/geo-graphics/index.html
+++ b/geo-graphics/index.html
@@ -1,34 +1,276 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
-  	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Flags</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>geo-flags</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
-  	<link rel="stylesheet" href="assets/css/main.css" type="text/css">
-  	<script src="assets/js/jquery-3.4.1.min.js"></script>
-  	<script src="assets/js/main.js"></script>
-  </head>
-  <body>
-    <div class="earthbackground">
-    <div class="grid">
-  
-  <div class="grid-earth">
-    <div class="earthcolor1"></div>
-  </div>
-  
-  <div class="grid-earth">
-    <div class="earthcolor2"></div>
-  </div>
-  
-  <div class="grid-earth">
-    <div class="earthcolor3"></div>
-  </div>
-  
-  <div class="grid-earth">
-  <div class="earthcolor4"></div>
-  </div>
-</div>
-</div>
-  </body>
+    <link rel="stylesheet" href="assets/css/index.css" type="text/css">
+    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/main.js"></script>
+</head>
+
+<body>
+    <div class="intro">
+        geo flags! <a href="../index.html"><img src="assets/images/back.png"></a>
+    </div>
+
+    <div class="table">
+
+        <div class="row2">
+            <div class="title">
+                page
+            </div>
+            <div class="type">
+                title
+            </div>
+            <div class="date">
+                themes
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="title">
+                <a href="earth1.html">earth 1</a>
+            </div>
+            <div class="type">
+                color zoom
+            </div>
+            <div class="date">
+                satellite, zoom, color
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="title">
+                <a href="earth2.html">earth 2</a>
+            </div>
+            <div class="type">
+                swatches
+            </div>
+            <div class="date">
+                colors, minimalism
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="title">
+                <a href="earth3.html">earth 3</a>
+            </div>
+            <div class="type">
+                blue dot
+            </div>
+            <div class="date">
+                space, zoomed out, small
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="title">
+                <a href="earth4.html">earth 4</a>
+            </div>
+            <div class="type">
+                globes
+            </div>
+            <div class="date">
+                spin, space
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="title">
+                <a href="earth5.html">earth 5</a>
+            </div>
+            <div class="type">
+                earth colors
+            </div>
+            <div class="date">
+                gradient, minimalism
+            </div>
+        </div>    
+
+         <div class="row">
+            <div class="title">
+                <a href="earth6.html">earth 6</a>
+            </div>
+            <div class="type">
+                elements
+            </div>
+            <div class="date">
+                periodic table, colors
+            </div>
+        </div> 
+
+         <div class="row">
+            <div class="title">
+                <a href="earth7.html">earth 7</a>
+            </div>
+            <div class="type">
+                h2o
+            </div>
+            <div class="date">
+                molecule, spin, science
+            </div>
+        </div> 
+
+        <div class="row">
+            <div class="title">
+                <a href="earth8.html">earth 8</a>
+            </div>
+            <div class="type">
+                equator
+            </div>
+            <div class="date">
+               science, hemispheres
+            </div>
+        </div>  
+
+        <div class="row">
+            <div class="title">
+                <a href="earth9.html">earth 9</a>
+            </div>
+            <div class="type">
+                plant
+            </div>
+            <div class="date">
+                flora, water, life
+            </div>
+        </div>   
+
+        <div class="row">
+            <div class="title">
+                <a href="earth10.html">earth 10</a>
+            </div>
+            <div class="type">
+                earth layers
+            </div>
+            <div class="date">
+                science, cross-section
+            </div>
+        </div>    
+
+        <div class="row">
+            <div class="title">
+                <a href="user1.html">user 1</a>
+            </div>
+            <div class="type">
+                access denied
+            </div>
+            <div class="date">
+                finger-print, identity
+            </div>
+        </div>    
+
+        <div class="row">
+            <div class="title">
+                <a href="user2.html">user 2</a>
+            </div>
+            <div class="type">
+                avatars
+            </div>
+            <div class="date">
+                users, face, identity
+            </div>
+        </div>    
+
+        <div class="row">
+            <div class="title">
+                <a href="user3.html">user 3</a>
+            </div>
+            <div class="type">
+                mean comment
+            </div>
+            <div class="date">
+                troll, communication
+            </div>
+        </div>    
+
+         <div class="row">
+            <div class="title">
+                <a href="user4.html">user 4</a>
+            </div>
+            <div class="type">
+                click images
+            </div>
+            <div class="date">
+                identity, toaster, duck
+            </div>
+        </div>  
+
+         <div class="row">
+            <div class="title">
+                <a href="user5.html">user 5</a>
+            </div>
+            <div class="type">
+                ip address
+            </div>
+            <div class="date">
+                identity, number, internet
+            </div>
+        </div>  
+
+         <div class="row">
+            <div class="title">
+                <a href="user6.html">user 6</a>
+            </div>
+            <div class="type">
+                eye scanner
+            </div>
+            <div class="date">
+                identity, eyes, lazer
+            </div>
+        </div>  
+
+         <div class="row">
+            <div class="title">
+                <a href="user7.html">user 7</a>
+            </div>
+            <div class="type">
+                daddy google
+            </div>
+            <div class="date">
+                overlord, flashy, big
+            </div>
+        </div>  
+
+         <div class="row">
+            <div class="title">
+                <a href="user8.html">user 8</a>
+            </div>
+            <div class="type">
+                roomba slave
+            </div>
+            <div class="date">
+                help, auto, robot
+            </div>
+        </div>  
+
+         <div class="row">
+            <div class="title">
+                <a href="user9.html">user 9</a>
+            </div>
+            <div class="type">
+                not available
+            </div>
+            <div class="date">
+                404, region, youtube
+            </div>
+        </div>    
+
+        <div class="row">
+            <div class="title">
+                <a href="user10.html">user 10</a>
+            </div>
+            <div class="type">
+                human proof
+            </div>
+            <div class="date">
+                coriander, yucky
+            </div>
+        </div>             
+    </div>
+
+</body>
+
 </html>
