--- a/geo-graphics/earth10.html
+++ b/geo-graphics/earth10.html
@@ -3,23 +3,19 @@
   <head>
     <meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Boilerplate Starter kit v1.08</title>
+    <title>Flags</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
-  	<link rel="stylesheet" href="assets/css/main5.css" type="text/css">
+  	<link rel="stylesheet" href="assets/css/main10.css" type="text/css">
   	<script src="assets/js/jquery-3.4.1.min.js"></script>
   	<script src="assets/js/main.js"></script>
   </head>
   <body>
-
-   <div class="grids">
   
-  <div class="grid1">
-    <div class="gradient1"></div>
-  </div>
-  
-  <div class="grid2">
-    <div class="gradient2"></div>
-  </div>
+  <div class="earth">
+  <div class="crust"><div class="crust-text">CRUST</div></div>
+  <div class="mantle"><div class="mantle-text">MANTLE</div></div>
+  <div class="core"><div class="core-text">CORE</div></div>
 </div>
+
   </body>
 </html>
