--- a/geo-graphics/earth5.html
+++ b/geo-graphics/earth5.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Boilerplate Starter kit v1.08</title>
+    <title>Flags</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
-  	<link rel="stylesheet" href="assets/css/main4.css" type="text/css">
+  	<link rel="stylesheet" href="assets/css/main5.css" type="text/css">
   	<script src="assets/js/jquery-3.4.1.min.js"></script>
   	<script src="assets/js/main.js"></script>
   </head>
@@ -13,12 +13,12 @@
 
    <div class="grids">
   
-  <div class="grid">
-    <div class="gradient"></div>
+  <div class="grid1">
+    <div class="gradient1"></div>
   </div>
   
-  <div class="grid">
-    <div class="gradient"></div>
+  <div class="grid2">
+    <div class="gradient2"></div>
   </div>
 </div>
   </body>
