--- a/geo-graphics/user7.html
+++ b/geo-graphics/user7.html
@@ -3,27 +3,19 @@
   <head>
     <meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Boilerplate Starter kit v1.08</title>
+    <title>Flags</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
-  	<link rel="stylesheet" href="assets/css/main7.css" type="text/css">
+  	<link rel="stylesheet" href="assets/css/main17.css" type="text/css">
   	<script src="assets/js/jquery-3.4.1.min.js"></script>
   	<script src="assets/js/main.js"></script>
   </head>
   <body>
 
- <div class="grids">
+  <div class="googlepage">
+  <div class="daddy"><div class="daddy-text">DADDY</div></div>
+  <div class="google"><div class="google-text">GOOGLE</div></div>
   
-  <div class="grid">
-    <div class="gradient">
-      <div class="imagespin">
-        <img src="assets/images/h2o.png">
-      </div>
-
-    </div>
-  </div>
-
 </div>
-  
 
   </body>
 </html>
