--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <div class="nav">
      <div class="nav-item"><a href="future-signals/index.html">PROJECT1</a></div>
      <div class="nav-item"><a href="geo-graphics/index.html">PROJECT2</a></div>
-     <div class="nav-item"><a href="l-a-n/index.html">PROJECT3</a></div>
+     <div class="nav-item"><a href="lan/index.html">PROJECT3</a></div>
    </div>
 
 <div id="1" class="title">
