--- a/Future-Signals/index.html
+++ b/Future-Signals/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Boilerplate Starter kit v1.07</title>
+    <title>Entry-Level Gambling Simulator</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
   	<link rel="stylesheet" href="assets/css/main.css" type="text/css">
   	<script src="assets/js/jquery-3.4.1.min.js"></script>
@@ -13,60 +13,96 @@
    
 <div class="nav">
   
-<a href="index.html">Future Signals</a>
-<a href="essay.html">Essays</a>
+<a href="index.html">Home</a>
+<a href="essay.html">Essay</a>
 
 <div class="nav-header">Filter:</div>
 
 <div class="nav-item">All</div>
-<div class="nav-item btn-car">Car</div>
-<div class="nav-item">Tracking</div>
-<div class="nav-item">Kinect</div>
-<div class="nav-item">Symbol</div>
-<div class="nav-item">Echo</div>
+<div class="nav-item btn-gym">Gym</div>
+<div class="nav-item btn-neo">Neo</div>
+<div class="nav-item btn-e">E-cards</div>
 
 
-</div>
-
-<div class="title">
-  <img src="assets/images/title.jpg">
 </div>
 
 <div class="research">
+
+  <div class="title">
+  <img src="images/title.gif">
+</div>
   
-  <div class="research-item car">
-    <img src="assets/images/file1.jpg">
-    <span>File 1, Car, Echo</span>
-  </div>
+  
+    <a class="research-item Base" href="base_set.html"><img src="images/base1.jpg" style="border:0;"></a>
+    <span></span>
+  
 
    <div class="research-item">
-    <img src="assets/images/file2.jpg">
-    <span>File 2, Kinect, Tracking</span>
+    <img src="images/jungle1.jpg">
+    <span></span>
   </div>
 
   <div class="research-item">
-    <img src="assets/images/file3.jpg">
-    <span>File 3, Kinect, Tracking</span>
+    <img src="images/fossil1.jpg">
+    <span></span>
   </div>
 
   <div class="research-item">
-    <img src="assets/images/file5.jpg">
-    <span>File 5, Motion, Symbol</span>
+    <img src="images/rocket1.jpg">
+    <span></span>
   </div>
 
-  <div class="research-item car">
-    <img src="assets/images/file9.jpg">
-    <span>File 9, Car, Echo</span>
+  <div class="research-item gym">
+    <img src="images/gym1.jpg">
+    <span>Gym</span>
   </div>
 
-  <div class="research-item">
-    <img src="assets/images/file8.jpg">
-    <span>File 8, Symbol</span>
+  <div class="research-item gym">
+    <img src="images/gym2.jpg">
+    <span>Gym</span>
+  </div>
+
+   <div class="research-item neo">
+    <img src="images/neog1.jpg">
+    <span>Neo</span>
+  </div>
+
+ <div class="research-item neo">
+    <img src="images/neod1.jpg">
+    <span>Neo</span>
+  </div>
+
+ <div class="research-item neo">
+    <img src="images/neor1.jpg">
+    <span>Neo</span>
+  </div>
+
+   <div class="research-item e">
+    <img src="images/ex1.jpg">
+    <span></span>
+  </div>
+
+   <div class="research-item e">
+    <img src="images/aq1.jpg">
+    <span></span>
+  </div>
+
+  <div class="research-item e">
+    <img src="images/sky1.jpg">
+    <span></span>
+  </div>
+
+  <div class="research-item e">
+    <img src="images/rs1.jpg">
+    <span></span>
+  </div>
+
+ <div class="research-item e">
+    <img src="images/sand1.jpg">
+    <span></span>
   </div>
 
 </div>
-
-
 
   </body>
 </html>
