--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- start here -->
 
    <div class="nav">
-     <div class="nav-item"><a href="future-signals/index.html">PROJECT1</a></div>
+     <div class="nav-item"><a href="signals/index.html">PROJECT1</a></div>
      <div class="nav-item"><a href="geo-graphics/index.html">PROJECT2</a></div>
      <div class="nav-item"><a href="lan/index.html">PROJECT3</a></div>
    </div>
