--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- start here -->
 
    <div class="nav">
-     <div class="nav-item"><a href="signals/index.html">PROJECT1</a></div>
-     <div class="nav-item"><a href="geo-graphics/index.html">PROJECT2</a></div>
-     <div class="nav-item"><a href="lan/index.html">PROJECT3</a></div>
+     <div class="nav-item"><a href="signals/index.html">Future Signals</a></div>
+     <div class="nav-item"><a href="geo-graphics/index.html">Flags</a></div>
+     <div class="nav-item"><a href="lan/index.html">L.A.N</a></div>
    </div>
 
 <div id="1" class="title">
